[gd_scene load_steps=15 format=3 uid="uid://b8h8sgc5adl6x"]

[ext_resource type="Texture2D" uid="uid://63ut5seko7tq" path="res://Entities/Enemies/Imp/Imp_spritesheet.png" id="1_bkuf1"]
[ext_resource type="Script" path="res://Entities/Common Entity Components/HealthComponent.gd" id="1_enyld"]
[ext_resource type="Script" path="res://Entities/Common Entity Components/AttackComponent.gd" id="2_1oqk3"]
[ext_resource type="Script" path="res://Entities/Enemies/MeleeEnemyStateMachine/MeeleeEnemySM.gd" id="4_sl2bf"]
[ext_resource type="Script" path="res://Entities/Enemies/MeleeEnemyStateMachine/States/MEIdleState.gd" id="5_wugd6"]
[ext_resource type="Script" path="res://Entities/Enemies/MeleeEnemyStateMachine/States/MEDeathState.gd" id="6_q54nw"]
[ext_resource type="Script" path="res://Entities/Enemies/MeleeEnemyStateMachine/States/MEAttackState.gd" id="7_ei0yl"]
[ext_resource type="Script" path="res://Entities/Enemies/MeleeEnemyStateMachine/States/MEMoveState.gd" id="7_mw3k7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tl53j"]
size = Vector2(8, 14)

[sub_resource type="Animation" id="Animation_0iph8"]
resource_name = "attack"

[sub_resource type="Animation" id="Animation_tbcn4"]
resource_name = "death"

[sub_resource type="Animation" id="Animation_dxx1v"]
resource_name = "idle"

[sub_resource type="Animation" id="Animation_qh31e"]
resource_name = "move"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3nguv"]
_data = {
"attack": SubResource("Animation_0iph8"),
"death": SubResource("Animation_tbcn4"),
"idle": SubResource("Animation_dxx1v"),
"move": SubResource("Animation_qh31e")
}

[node name="Imp" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 12

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("1_enyld")

[node name="AttackComponent" type="Node2D" parent="." node_paths=PackedStringArray("CB2D")]
script = ExtResource("2_1oqk3")
CB2D = NodePath("..")

[node name="CB2D collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tl53j")

[node name="Visuals" type="Node2D" parent="."]

[node name="ImpSpritesheet" type="Sprite2D" parent="Visuals"]
position = Vector2(1, -2)
texture = ExtResource("1_bkuf1")
hframes = 13
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals"]
libraries = {
"Imp": SubResource("AnimationLibrary_3nguv")
}

[node name="HitflashAnimator" type="AnimationPlayer" parent="Visuals"]

[node name="ControlAreas" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="ControlAreas"]

[node name="PursueArea" type="Area2D" parent="ControlAreas"]

[node name="MeeleeEnemySM" type="Node2D" parent="."]
script = ExtResource("4_sl2bf")

[node name="MEIdleState" type="Node2D" parent="MeeleeEnemySM"]
script = ExtResource("5_wugd6")

[node name="MEMoveState" type="Node2D" parent="MeeleeEnemySM"]
script = ExtResource("7_mw3k7")

[node name="MEAttackState" type="Node2D" parent="MeeleeEnemySM"]
script = ExtResource("7_ei0yl")

[node name="MEDeathState" type="Node2D" parent="MeeleeEnemySM"]
script = ExtResource("6_q54nw")

[node name="Timers" type="Node2D" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]

[node name="KBTimer" type="Timer" parent="Timers"]
wait_time = 0.05

[node name="Timer3" type="Timer" parent="Timers"]
